--- a/src/Uhuru.Prison/Uhuru.Prison.csproj
+++ b/src/Uhuru.Prison/Uhuru.Prison.csproj
@@ -73,6 +73,7 @@
     <Reference Include="System.DirectoryServices.AccountManagement" />
     <Reference Include="System.Management" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -82,6 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Allowances\IISGroup.cs" />
+    <Compile Include="ExecutorService\IExecutor.cs" />
     <Compile Include="Rule.cs" />
     <Compile Include="Restrictions\CPU.cs" />
     <Compile Include="Restrictions\Disk.cs" />
