--- a/src/Uhuru.Prison/Uhuru.Prison.csproj
+++ b/src/Uhuru.Prison/Uhuru.Prison.csproj
@@ -57,6 +57,12 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <WarningsAsErrors>612,618</WarningsAsErrors>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="AlphaFS">
       <HintPath>..\..\lib\AlphaFS.dll</HintPath>
@@ -137,6 +143,7 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="key.snk" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
